    + Use the correct path when repacking zip files.  (Closes: #622889)
    + Make file show all matched file types instead of just the first.
      (Closes: #574155)
  * uupdate: Handle hidden files when the upstream archive doesn't contain its
    files under one top-level directory.  (Closes: #601945)
  * bts: Indicate version argument is optional for done command.  (Closes:
    #623567)
  * debsnap: Add support for download binary packages.  Thanks to Timo Juhani
    Lindfors for the patch.  (Closes: #587523)

  [ Benjamin Drung ]
  * Add myself to uploaders.
  * Wrap and sort lists in debian/control. (Closes: #577999)
  * Switch to simple dh 8 rule.
  * debcommit: Support for commiting from debian/ when using bzr. Thanks to
    Loïc Minier for the patch. (Closes: #580861)

  [ Patrick Schoenfeld ]
  * checkbashisms:
    - add code to detect weither STDIN is a pipe and if so, write the lines
      passed via stdin to a tempfile
    - add tempfile filename to the list of files to process
    - add logic to detect if filename is a tempfile and if so, use the string
    "(stdin)" for filename display instead of the real filename.
    (Closes: #586500)

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Thu, 21 Apr 2011 13:13:43 +0200

devscripts (2.10.72) unstable; urgency=low

  [ James Vega ]
  * debuild: Use 3-argument form of open to suppress warnings about unused
    symbols.  (Closes: #606054)
  * Cleanup Recommends to avoid pulling in as many packages by default.  The
    remaining Recommends are relevant to the more commonly used scripts or
    functionality.  Relationships removed from Recommends were either added to
    Suggests if it makes sense to call some attention to them or were removed
    from debian/control completely.  (Closes: #605102, #610310, LP: #485264)
  * uscan:
    + Let unzip convert text files to native line endings when repacking.
      Thanks to Daniel Kahn Gilmor for the suggestion.  (Closes: #618513)